2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out the management client whc(1) in 'src/whc/'.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added whprocess(1) in 'src/whprocess/.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'List Hosts' dialog to whc(1).