@@ -6,3 +6,7 @@
 	* Added whprocess(1) in 'src/whprocess/.
 2017-09-06 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'List Hosts' dialog to whc(1).
+2017-09-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added an 'UNKNOWN_EVENTS' table to the database.
+	* Incremented the database version to 2.
+	* Added a 'List Unknown Events' dialog to whc(1).
